--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -33,36 +33,28 @@
     <ClInclude Include="..\src\components\AIFireComponent.h" />
     <ClInclude Include="..\src\components\AIFleeComponent.h" />
     <ClInclude Include="..\src\components\AIMeleeComponent.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\aim_player.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\CalculateFleePositionAction.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\change_aim_direction.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\change_speed.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\change_sprite.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\change_weapon.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\chase.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\check_life.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\death.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\fire.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\GoToBlackboardPositionAction.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\goto_player.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\goto_random.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\hit.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\idle.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\rotate_aim.h" />
-    <ClInclude Include="..\src\components\behavior_tree\actions\wait.h" />
-    <ClInclude Include="..\src\components\behavior_tree\behavior.h" />
-    <ClInclude Include="..\src\components\behavior_tree\behavior_tree.h" />
-    <ClInclude Include="..\src\components\behavior_tree\blackboard.h" />
-    <ClInclude Include="..\src\components\behavior_tree\ConditionNode.h" />
-    <ClInclude Include="..\src\components\behavior_tree\conditions\check_dead.h" />
-    <ClInclude Include="..\src\components\behavior_tree\conditions\check_distance.h" />
-    <ClInclude Include="..\src\components\behavior_tree\conditions\check_hit.h" />
-    <ClInclude Include="..\src\components\behavior_tree\DecoratorNode.h" />
-    <ClInclude Include="..\src\components\behavior_tree\group.h" />
-    <ClInclude Include="..\src\components\behavior_tree\parallel.h" />
-    <ClInclude Include="..\src\components\behavior_tree\repeat.h" />
-    <ClInclude Include="..\src\components\behavior_tree\selector.h" />
-    <ClInclude Include="..\src\components\behavior_tree\sequence.h" />
+    <ClInclude Include="..\src\components\BehaviorTreeComponent.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\Aim.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\CalculateFleePosition.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\CalculateRandomPosition.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\ChangeSpeed.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\ChangeSprite.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\ChangeWeapon.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\Fire.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\GoToBlackboardPosition.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\RotateAim.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\Wait.h" />
+    <ClInclude Include="..\src\components\behavior_tree\Behavior.h" />
+    <ClInclude Include="..\src\components\behavior_tree\Blackboard.h" />
+    <ClInclude Include="..\src\components\behavior_tree\Composite.h" />
+    <ClInclude Include="..\src\components\behavior_tree\composites\Parallel.h" />
+    <ClInclude Include="..\src\components\behavior_tree\composites\Selector.h" />
+    <ClInclude Include="..\src\components\behavior_tree\composites\Sequence.h" />
+    <ClInclude Include="..\src\components\behavior_tree\Condition.h" />
+    <ClInclude Include="..\src\components\behavior_tree\conditions\CheckIsAtDistance.h" />
+    <ClInclude Include="..\src\components\behavior_tree\conditions\CheckLife.h" />
+    <ClInclude Include="..\src\components\behavior_tree\Decorator.h" />
+    <ClInclude Include="..\src\components\behavior_tree\decorators\Repeat.h" />
     <ClInclude Include="..\src\components\bossIAComponent.h" />
     <ClInclude Include="..\src\components\ColliderComponent.h" />
     <ClInclude Include="..\src\components\component.h" />
@@ -123,36 +115,28 @@
     <ClCompile Include="..\src\components\AIFireComponent.cpp" />
     <ClCompile Include="..\src\components\AIFleeComponent.cpp" />
     <ClCompile Include="..\src\components\AIMeleeComponent.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\aim_player.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\CalculateFleePositionAction.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\change_aim_direction.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\change_speed.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\change_sprite.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\change_weapon.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\chase.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\check_life.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\death.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\fire.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\GoToBlackboardPositionAction.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\goto_player.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\goto_random.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\hit.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\idle.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\rotate_aim.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\actions\wait.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\behavior.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\behavior_tree.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\blackboard.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\ConditionNode.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\conditions\check_dead.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\conditions\check_distance.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\conditions\check_hit.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\DecoratorNode.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\group.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\parallel.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\repeat.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\selector.cpp" />
-    <ClCompile Include="..\src\components\behavior_tree\sequence.cpp" />
+    <ClCompile Include="..\src\components\BehaviorTreeComponent.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\Aim.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\CalculateFleePosition.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\CalculateRandomPosition.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\ChangeSpeed.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\ChangeSprite.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\ChangeWeapon.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\Fire.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\GoToBlackboardPosition.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\RotateAim.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\Wait.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\Behavior.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\Blackboard.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\Composite.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\composites\Parallel.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\composites\Selector.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\composites\Sequence.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\Condition.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\conditions\CheckIsAtDistance.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\conditions\CheckLife.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\Decorator.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\decorators\Repeat.cpp" />
     <ClCompile Include="..\src\components\bossIAComponent.cpp" />
     <ClCompile Include="..\src\components\ColliderComponent.cpp" />
     <ClCompile Include="..\src\components\component.cpp" />
